--- a/package.json
+++ b/package.json
@@ -54,11 +54,10 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "2.1.3",
-        "@ionic/cli-plugin-ionic-angular": "1.4.1",
+        "cross-env": "^5.0.5",
         "ionic": "3.9.2",
         "typescript": "2.3.4",
-        "webpack-merge": "^4.1.0",
-        "cross-env": "^5.0.5"
+        "webpack-merge": "^4.1.0"
     },
     "cordova": {
         "plugins": {
